# Useful_Habits

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.data/db/base/1/: pg_internal.init
.data/db/base/16384/: pg_internal.init
.data/db/base/5/: pg_internal.init
.data/db/global/: 1260  1262  2671  pg_control  pg_internal.init
.data/db/pg_stat/: pgstat.stat
config/: settings.py  urls.py
data/redis/: dump.rdb
habit_app/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit_app/migrations/: 0001_initial.py  0002_alter_habit_periodicity.py  0003_alter_habit_related_habit.py  0004_alter_habit_related_habit.py  0005_alter_habit_nice_habit.py  0006_alter_habit_nice_habit.py  0007_alter_habit_owner.py  0008_alter_habit_periodicity.py  0009_alter_habit_name.py  0010_alter_habit_date.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_user_telegram_id.py
